syntax = "proto3";
option java_package = "com.Proto";
option java_outer_classname = "SecondaryMetaClass";


message SecondaryMeta{
    string video_summary = 1;
    int64 block_info = 2;
    string container_info = 3;
    int64 timestamp = 4;
    string encode_info = 5;
    int64 frame_number = 6;

    message FrameInfoGroup{
        int64 start_index = 1;
        int64 start_frame_no = 2;
    }

    repeated FrameInfoGroup frame_meta_info = 7;
}